# av-studio-m4

./: .env.example  .gitignore  LICENSE  PHASE2_GUIDE.md  PR_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  av_studio_project_structure.txt  av_studio_src_agents_orchestrator.py  av_studio_src_gateway_router.py  av_studio_src_mcp_server.py  create-dev-branch.sh  pyproject.toml  spec-kit_constitution.md  spec-kit_tasks.md
.github/: copilot-instructions.md
.github/workflows/: branch-setup.yml  create-task-issues.yml  initialize-ai-sdlc.yml  lint.yml  test.yml  typecheck.yml
scripts/: README.md  create_task_issues.py
spec-kit/: plan.md  spec.md
src/av_studio/agents/: orchestrator.py
src/av_studio/config/: settings.py
src/av_studio/gateway/: router.py  token_analyzer.py
src/av_studio/llm/: mlx_client.py
src/av_studio/mcp/: server.py
src/av_studio/processing/audio/: pipeline.py
tests/: conftest.py
tests/config/: test_settings.py
