[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "av-studio"
version = "0.1.0"
description = "AI-Powered Audio/Video Production Studio for Apple M4 Max"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "scotlaclair", email = "scotlaclair@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # ML Frameworks
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "mlx>=0.30.5",
    "mlx-lm",
    
    # Audio Processing
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "pedalboard>=0.9.22",
    "faster-whisper>=1.2.1",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    
    # Video Processing
    "opencv-python>=4.13.0.90",
    "av>=16.1.0",
    
    # ML Tools
    "coremltools>=9.0",
    "transformers",
    
    # API Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    
    # LLM Clients
    "openai>=1.0",
    "anthropic>=0.39",
    "google-generativeai",
    "tiktoken>=0.8",
    
    # MCP Protocol
    "mcp>=1.0",
    
    # Database & Storage
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "aiofiles>=24.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "black>=24.0",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/scotlaclair/av-studio-m4"
Repository = "https://github.com/scotlaclair/av-studio-m4"
Issues = "https://github.com/scotlaclair/av-studio-m4/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "demucs.*",
    "pedalboard.*",
    "faster_whisper.*",
    "librosa.*",
    "chromadb.*",
    "mcp.*",
    "torch.*",
    "torchaudio.*",
    "tiktoken.*",
    "transformers.*",
    "pydantic.*",
    "pydantic_settings.*",
    "pyloudnorm.*",
    "mlx.*",
    "mlx_lm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src/av_studio --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/av_studio"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
